--- a/age-light.css
+++ b/age-light.css
@@ -26,7 +26,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 645px;
-  min-height: 250px;
+  min-height: 300px;
   background-color: #af8260;
   border-radius: 40px 40px 150px 40px;
   padding: 50px;
@@ -34,13 +34,20 @@ section {
 
 .app-data {
   display: flex;
+  flex-direction: column;
+
   border-bottom: 2px solid #e4c59e;
 }
 
 form {
   display: flex;
   gap: 20px;
+  padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.instructions {
+  color: #e4c59e;
 }
 
 .input-div {
@@ -100,6 +107,10 @@ button[type="submit"] svg path {
 
 .app-results span {
   color: #803d3b;
+}
+
+.app-results div p:nth-child(1) {
+  text-decoration: underline;
 }
 
 .next-birthday {
