--- a/age.css
+++ b/age.css
@@ -24,7 +24,7 @@ section {
   display: flex;
   flex-direction: column;
   width: 645px;
-  min-height: 250px;
+  min-height: 300px;
   background-color: #393e46;
   border-radius: 40px 40px 150px 40px;
   padding: 50px;
@@ -32,13 +32,19 @@ section {
 
 .app-data {
   display: flex;
+  flex-direction: column;
   border-bottom: 2px solid #222831;
 }
 
 form {
   display: flex;
   gap: 20px;
+  padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.instructions {
+  color: #eee;
 }
 
 .input-div {
@@ -98,6 +104,10 @@ button[type="submit"] svg path {
 
 .app-results span {
   color: #00adb5;
+}
+
+.app-results div p:nth-child(1) {
+  text-decoration: underline;
 }
 
 .next-birthday {
