--- a/age.css
+++ b/age.css
@@ -10,6 +10,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 30px;
   height: 100vh;
   background-color: #222831;
 }
