--- a/age-responsive.css
+++ b/age-responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 376px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 375px) {
   section {
     flex-direction: column;
   }
@@ -29,7 +29,7 @@
   }
 }
 
-@media only screen and (min-width: 425px) {
+@media only screen and (min-device-width: 376px) and (max-device-width: 426px) {
   section {
     flex-direction: column;
   }
